--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,8 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+# Project setting
+!*/.gitignore
+**/_generated
+
 # End of https://www.toptal.com/developers/gitignore/api/flutter
