--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^3.1.0
   http: ^1.2.0
-  json_annotation: ^4.9.0
+  
+  # annotation
+  freezed_annotation:
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.9
-  json_serializable: ^6.8.0
+  
+  # automatic code generation
+  build_runner:
+  json_serializable:
+  source_gen:
+  freezed:
 
 flutter:
   uses-material-design: true
